# workflow-engine

./: .gitignore  .kittyrc.json  Cargo.toml  Justfile  package.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: CI.yml  napi.yml  test.yml
crates/core/: Cargo.toml
crates/core/src/: decl.rs  decl_builder.rs  lib.rs  napi_demo.rs  workflow.rs
crates/js-runtime/: Cargo.toml
crates/js-runtime/benches/: eval.rs
crates/js-runtime/js/: 98_global_scope_for_test.js
crates/js-runtime/src/: deno_runtime.rs  eval.rs  executor.rs  lib.rs  result.rs  utils.rs
crates/napi/: Cargo.toml  package.json
crates/napi/npm/android-arm-eabi/: package.json
crates/napi/npm/darwin-x64/: package.json
crates/napi/npm/freebsd-x64/: README.md  package.json
crates/napi/npm/linux-x64-musl/: README.md  package.json
crates/napi/npm/win32-arm64-msvc/: package.json
crates/napi/npm/win32-ia32-msvc/: README.md
crates/napi/npm/win32-x64-msvc/: package.json
crates/napi/src/: lib.rs
crates/workflow-engine/: Cargo.toml
crates/workflow-engine-core/: Cargo.toml
crates/workflow-engine-napi/: Cargo.toml  browser.js  index.d.ts  index.js  package-template.wasi.cjs  package.json  workflow-engine.wasi-browser.js  workflow-engine.wasi.cjs
crates/workflow-engine-napi/__test__/: index.spec.ts
crates/workflow-engine-napi/npm/android-arm-eabi/: README.md  package.json
crates/workflow-engine-napi/npm/android-arm64/: README.md  package.json
crates/workflow-engine-napi/npm/darwin-arm64/: package.json
crates/workflow-engine-napi/npm/darwin-x64/: package.json
crates/workflow-engine-napi/npm/freebsd-x64/: package.json
crates/workflow-engine-napi/npm/linux-arm-gnueabihf/: README.md  package.json
crates/workflow-engine-napi/npm/linux-arm64-gnu/: package.json
crates/workflow-engine-napi/npm/linux-arm64-musl/: README.md  package.json
crates/workflow-engine-napi/npm/linux-x64-gnu/: package.json
crates/workflow-engine-napi/npm/linux-x64-musl/: package.json
crates/workflow-engine-napi/npm/wasm32-wasi/: README.md  package.json
crates/workflow-engine-napi/npm/win32-arm64-msvc/: README.md  package.json
crates/workflow-engine-napi/npm/win32-ia32-msvc/: package.json
crates/workflow-engine-napi/npm/win32-x64-msvc/: package.json
crates/workflow-engine-napi/src/: lib.rs
crates/workflow-engine/src/: action.rs  engine.rs  execute.rs  lib.rs  registry.rs  workflow.rs
examples/: Cargo.toml
examples/single-workflow/: actions.rs  main.rs  workflow.rs  workflow.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md
npm/win32-arm64-msvc/: package.json
npm/win32-x64-msvc/: README.md
