[workspace]
members = ["crates/napi", "crates/core", "crates/js-runtime", "crates/workflow-engine"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
workflow-engine = { path = "./crates/workflow-engine" }
workflow-engine-core = { path = "crates/core" }
workflow-engine-napi = { path = "crates/napi" }
workflow-engine-js-runtime = { path = "./crates/js-runtime" }

tokio = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "registry", "smallvec", "std", "tracing-log"] }
tracing-bunyan-formatter = "0.3"
tracing-panic = "0.1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime-serde = "1"
serde-aux = "4"
mockito = "1"
rand = "0.8"
uuid = { version = "1", features = ["v7"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
derive_builder = "0.20.2"
scopeguard = "1.2.0"

deno_core = "0.324.0"
deno_console = "0.182.0"
deno_crypto = "0.196.0"
deno_fetch = "0.206.0"
deno_url = "0.182.0"
deno_web = "0.213.0"
deno_webidl = "0.182.0"
num-bigint = "0.4.5"

napi = { version = "3.0.0-alpha.23", default-features = false, features = ["napi9", "async", "chrono_date", "error_anyhow", "serde"] }
napi-derive = "3.0.0-alpha.21"
napi-build = "2"

test-log = { version = "0.2", features = ["trace"] }
criterion2 = { version = "2", features = ["async_tokio"] }
assertables = "9"

[profile.release]
lto = true
strip = "symbols"
