[package]
name = "js-runtime"
version = "0.0.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
derive_builder.workspace = true
deno_core.workspace = true
serde.workspace = true
futures.workspace = true

[dev-dependencies]
anyhow.workspace = true
num-bigint.workspace = true
criterion2.workspace = true
deno_console.workspace = true
deno_crypto.workspace = true
deno_fetch.workspace = true
deno_url.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
assertables.workspace = true

[[bench]]
name = "eval"
harness = false