[package]
edition = "2021"
name = "workflow-engine-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
workflow-engine-core = { path = "../workflow-engine-core" }

napi = { version = "2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"


