[package]
edition = "2021"
name = "workflow-engine-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
workflow-engine-core = { path = "../workflow-engine-core" }

napi.workspace = true
napi-derive.workspace = true

anyhow.workspace = true

[build-dependencies]
napi-build.workspace = true


